# sovereign

./: .gitignore  Brewfile  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  harness-bench-implementation-plan.md  mlx.yaml.bak  plan.md  pyproject.toml  pyproject.toml.bak  sovereign-implementation-plan-v1.1.md  sovereign.yaml
.claude/skills/adr/: SKILL.md
.claude/skills/architecture-review/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: architecture.md  dependency-graph.md  harness-bench-implementation-plan.md  sovereign-implementation-plan-v1.1.md
docs/decisions/: 0001-declarative-control-plane-no-daemon.md  0002-registry-self-registration-base-type-routing.md  0003-refuse-to-boot-admission-control.md  0004-embedded-engine-workers.md  0005-uds-ndjson-telemetry.md  0006-engine-gap-policy.md  0007-llama-cpp-server-over-bindings.md  0008-comfyui-checkpoint-artifact-kind.md  README.md
examples/: comfyui.yaml  macbook-128gb-agentic.yaml  mlx.yaml  sovereign.yaml
examples/bench/: perf-attach.yaml  quality-cleanroom.yaml  quality-stack.yaml
examples/bench/smoke_suite/: suite.yaml
examples/bench/smoke_suite/fixture/: test_util.py
scripts/: check_docs.py  depgraph.py  setup.py
src/sovereign/: __init__.py  config.py  dashboard.py  hf.py  logging_config.py  main.py  orchestrator.py
src/sovereign/bench/: __init__.py  cells.py  cleanroom.py  cli.py  grading.py  lock.py  perf.py  quality.py  report.py  runner.py  spec.py  suites.py
src/sovereign/cli/: __init__.py  _common.py  harness.py  logging_config.py  models.py  stack.py
src/sovereign/core/: __init__.py  base_config.py  base_harness.py  base_manager.py  base_native.py  errors.py  models.py  planning.py  procmem.py  provisioning.py  registry.py  resolver.py  resources.py  state.py  status.py  units.py
src/sovereign/harnesses/: __init__.py
src/sovereign/harnesses/cline_cli/: Brewfile  __init__.py  config.py  manager.py
src/sovereign/harnesses/mini_swe_agent/: __init__.py  config.py  manager.py
src/sovereign/harnesses/opencode/: Brewfile  __init__.py  config.py  manager.py
src/sovereign/runtime/: __init__.py  dashboard.py  manifest.py  orchestrator.py  status.py  teardown.py  telemetry.py
src/sovereign/services/: __init__.py
src/sovereign/services/docker/: Brewfile  __init__.py  config.py  manager.py
src/sovereign/services/docker_engine/: Brewfile  __init__.py  config.py  manager.py
src/sovereign/services/inference/: __init__.py  base.py  hf.py  routing.py
src/sovereign/services/inference_engines/: __init__.py  base.py  hf.py  routing.py
src/sovereign/services/llama_cpp/: __init__.py  config.py  manager.py
src/sovereign/services/mlx_lm/: __init__.py  config.py  manager.py
src/sovereign/utils/: __init__.py  manifest.py  state.py  teardown.py
src/sovereign/workers/: __init__.py  comfyui_adapter.py  engine_worker.py  llama_cpp_adapter.py  mlx_lm_adapter.py  mlx_vlm_adapter.py  omlx_adapter.py  protocol.py  telemetry.py  worker_config.py
tests/: conftest.py  test_arch_rules.py  test_cli.py  test_config.py  test_hf.py  test_logging_config.py  test_monitor.py  test_orchestrator.py  test_protocol.py  test_resolver.py  test_resources.py  test_setup.py
tests/bench/: test_cells.py  test_cleanroom.py  test_grading.py  test_lock.py  test_perf.py  test_quality.py  test_report.py  test_runner.py  test_spec.py  test_suites.py
tests/core/: test_base_harness.py  test_models.py  test_planning.py  test_provisioning.py  test_state.py  test_units.py
tests/fixtures/: sample.yaml
tests/fixtures/fake_worker_adapters/: __init__.py  fake_adapter.py
tests/harnesses/: test_cline_cli.py  test_harness_integration.py  test_mini_swe_agent.py  test_opencode.py
tests/integration/: test_smoke_llama.py  test_smoke_mlx.py  test_smoke_omlx.py
tests/runtime/: test_manifest.py  test_teardown.py  test_telemetry_hub.py
tests/services/: test_docker.py  test_docker_engine.py  test_llama_cpp.py  test_mlx_lm.py  test_native.py  test_open_webui.py  test_searxng.py
tests/services/inference/: test_comfyui.py  test_llama_cpp.py  test_mlx_lm.py  test_mlx_vlm.py  test_native.py  test_omlx.py  test_routing.py
tests/services/inference_engines/: test_llama_cpp.py  test_mlx_lm.py  test_native.py  test_routing.py
tests/workers/: test_comfyui_adapter.py  test_engine_worker.py  test_llama_cpp_adapter.py  test_mlx_lm_adapter.py  test_mlx_vlm_adapter.py  test_omlx_adapter.py  test_telemetry_client.py  test_worker_protocol.py
(+28 files in other folders)
