[project]
name = "sovereign"
version = "0.1.0"
description = "A declarative control plane for running local LLM infrastructure on macOS/Apple Silicon."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2",
    "pyyaml>=6",
    "rich>=13",
    "psutil>=6",
    # mlx_lm engine — provides the `mlx_lm.server` console script. Apple-Silicon
    # only (mlx ships wheels for macOS arm64), so guard resolution on other platforms.
    "mlx-lm>=0.31; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[project.scripts]
sovereign = "sovereign.main:app"

[tool.uv]
# mlx-lm pulls transformers>=5.0.0, but 5.13.0 regressed AutoTokenizer.register
# and breaks `import mlx_lm`. Pin the transitive dep to the last working line.
constraint-dependencies = ["transformers<5.13"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sovereign"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Typer's idiom requires calling typer.Option() in argument defaults.
"src/sovereign/main.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
