[project]
name = "sovereign"
version = "0.1.0"
description = "A declarative control plane for running local LLM infrastructure on macOS/Apple Silicon."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "pydantic>=2",
    "pyyaml>=6",
    "rich>=13",
    "psutil>=6",
    # huggingface_hub: metadata, routing, and download for HF models. Unconditional
    # (works on all platforms) unlike mlx-lm which is Apple-Silicon only.
    "huggingface-hub>=1.22",
    # mlx_lm engine — provides the `mlx_lm.server` console script. Apple-Silicon
    # only (mlx ships wheels for macOS arm64), so guard resolution on other platforms.
    "mlx-lm>=0.31; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[project.optional-dependencies]
# mini_swe_agent harness (§4b) — imported lazily by its manager, so the base
# install stays lean; only needed to actually invoke() that harness.
harness = ["mini-swe-agent>=1.0"]
# Benchmarking subsystem (§6b) perf prober.
bench = ["httpx>=0.27"]

[project.scripts]
sovereign = "sovereign.cli:app"

[tool.uv]
# mlx-lm pulls transformers>=5.0.0, but 5.13.0 regressed AutoTokenizer.register
# and breaks `import mlx_lm`. Pin the transitive dep to the last working line.
constraint-dependencies = ["transformers<5.13"]

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pytest>=8",
    "ruff>=0.6",
    "types-psutil>=7.2.2.20260518",
    "types-pyyaml>=6.0.12.20260518",
    "types-tqdm>=4.68.0.20260608",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sovereign"]
# Brewfiles (per-integration provisioning) have no extension; pin their inclusion
# rather than relying on hatchling's copy-everything default.
artifacts = ["**/Brewfile"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Typer's idiom requires calling typer.Option() in argument defaults.
"src/sovereign/cli/*.py" = ["B008"]
"src/sovereign/bench/cli.py" = ["B008"]

[tool.mypy]
# The sources are densely annotated; mypy keeps them honest. Non-strict to start —
# tighten (disallow_untyped_defs, tests/) as the baseline stays clean.
python_version = "3.12"
files = ["src/sovereign", "tests"]
plugins = ["pydantic.mypy"]
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# Untyped (or platform-absent) third parties.
module = ["mlx_lm.*", "minisweagent.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Integration tests execute real binaries/network — opt in with `-m integration`
# (CI's macOS smoke job does); `make test` stays hermetic.
addopts = "-m 'not integration'"
markers = [
    "allow_provisioning: run the real Provisioner.provision() (test mocks the subprocess layer)",
    "integration: real end-to-end test (installs nothing, but runs real servers + network)",
]
